@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.21 2004/07/18 17:03:00 heinz Exp $
+# $NetBSD: Makefile,v 1.22 2004/07/31 07:24:03 jdolecek Exp $
 
 DISTNAME=	opera-${OPERA_PKG_VERSION}
 PKGREVISION=	# empty
@@ -48,19 +48,19 @@ PLIST_SRC=	${WRKDIR}/PLIST_DYNAMIC
 EXTRACT_SUFX=		.rpm
 OPERA_ARCH=		.i386
 OPERA_LANG=		en
-OPERA_VER_DATE=		20040706
-OPERA_PKG_VERSION=	7.52
+OPERA_VER_DATE=		20040716
+OPERA_PKG_VERSION=	7.53
 OPERA_DIR=		linux/${OPERA_PKG_VERSION:S/.//g:C/beta.*//}/final/${OPERA_LANG}/${OPERA_ARCH:S/.//}/static
 OPERA_DIST_VERSION=	${OPERA_PKG_VERSION:C/beta.*//}-${OPERA_VER_DATE}.1-static-qt
 
 RPMFILES=	${DISTFILES}
 
 .elif (${OPSYS} == FreeBSD)
-EXTRACT_SUFX=		.tar.bz2
+EXTRACT_SUFX=		.tar.gz
 OPERA_ARCH=		.i386.freebsd
 OPERA_LANG=		en
-OPERA_VER_DATE=		20040602
-OPERA_PKG_VERSION=	7.51
+OPERA_VER_DATE=		20040716
+OPERA_PKG_VERSION=	7.53
 OPERA_DIR=		unix/freebsd/${OPERA_PKG_VERSION:S/.//g:}/final/${OPERA_LANG}/static
 OPERA_DIST_VERSION=	${OPERA_PKG_VERSION}-${OPERA_VER_DATE}.1-static-qt
 
@@ -69,11 +69,11 @@ WRKSRC=			${WRKDIR}/opera-${OPERA_DIST_VERSION}${OPERA_ARCH}-${OPERA_LANG}
 OWN_DIRS=		${PREFIX}/share/opera/plugins
 
 .elif (${OPSYS} == SunOS) && (${MACHINE_ARCH} == sparc)
-EXTRACT_SUFX=		.tar.bz2
+EXTRACT_SUFX=		.tar.gz
 OPERA_ARCH=		-sol8-sparc-local
 OPERA_LANG=		en
-OPERA_VER_DATE=		20040706
-OPERA_PKG_VERSION=	7.52
+OPERA_VER_DATE=		20040716
+OPERA_PKG_VERSION=	7.53
 OPERA_DIR=		unix/solaris/${OPERA_PKG_VERSION:S/.//g}/final/${OPERA_LANG}/static
 OPERA_DIST_VERSION=	${OPERA_PKG_VERSION}-${OPERA_VER_DATE}.1-static-qt
 
