@@ -1,8 +1,8 @@
-$NetBSD: distinfo,v 1.12 2004/07/18 17:03:00 heinz Exp $
+$NetBSD: distinfo,v 1.13 2004/07/31 07:24:03 jdolecek Exp $
 
-SHA1 (./opera-7.52-20040706.1-static-qt.i386-en.rpm) = c9bb44946eb4ffe350b44f69a6d179a9a337988c
-Size (./opera-7.52-20040706.1-static-qt.i386-en.rpm) = 5269016 bytes
-SHA1 (opera-7.52-20040706.1-static-qt-sol8-sparc-local-en.tar.bz2) = 5bf447ca11f3fc6687fc24d97c3df78cb29f6c18
-Size (opera-7.52-20040706.1-static-qt-sol8-sparc-local-en.tar.bz2) = 5984797 bytes
-SHA1 (opera-7.51-20040602.1-static-qt.i386.freebsd-en.tar.bz2) = f4b71315d9684955fbe1cf9054f5cb6c5ba53edd
-Size (opera-7.51-20040602.1-static-qt.i386.freebsd-en.tar.bz2) = 4757901 bytes
+SHA1 (opera-7.53-20040716.1-static-qt.i386-en.rpm) = 7d7313477c964054320366d1dcb49231907207da
+Size (opera-7.53-20040716.1-static-qt.i386-en.rpm) = 5269697 bytes
+SHA1 (opera-7.53-20040716.1-static-qt-sol8-sparc-local-en.tar.gz) = 25729643fe1677700b6d574bf608968f50a67a57
+Size (opera-7.53-20040716.1-static-qt-sol8-sparc-local-en.tar.gz) = 6826932 bytes
+SHA1 (opera-7.53-20040716.1-static-qt.i386.freebsd-en.tar.gz) = 8ddd890459ef50f267d0d11bfcc8bd4077d4264d
+Size (opera-7.53-20040716.1-static-qt.i386.freebsd-en.tar.gz) = 5210665 bytes
